more queries to test rag in rag-intro, 01-homework file in progress - prompt count to be corrected

--- a/01-intro/rag-intro.ipynb
+++ b/01-intro/rag-intro.ipynb
@@ -10,16 +10,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2024-06-06 12:12:51--  https://raw.githubusercontent.com/alexeygrigorev/minsearch/main/minsearch.py\n",
-      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.110.133, 185.199.108.133, ...\n",
-      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\n",
+      "--2024-06-28 23:26:26--  https://raw.githubusercontent.com/alexeygrigorev/minsearch/main/minsearch.py\n",
+      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.111.133, 185.199.108.133, ...\n",
+      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 3832 (3.7K) [text/plain]\n",
-      "Saving to: ‘minsearch.py’\n",
+      "Saving to: ‘minsearch.py.2’\n",
       "\n",
-      "minsearch.py        100%[===================>]   3.74K  --.-KB/s    in 0s      \n",
+      "minsearch.py.2      100%[===================>]   3.74K  --.-KB/s    in 0.002s  \n",
       "\n",
-      "2024-06-06 12:12:51 (32.2 MB/s) - ‘minsearch.py’ saved [3832/3832]\n",
+      "2024-06-28 23:26:26 (1.91 MB/s) - ‘minsearch.py.2’ saved [3832/3832]\n",
       "\n"
      ]
     }
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "63b0fd25-41a2-48ad-b9bf-3f1265308bd4",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "9b37cce2-ed84-408b-9106-d61360aa82c9",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "5bdaf6ce-2540-494f-989c-5b94b1b6626c",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "42b9b1f9-3c90-42b0-beb4-cb419f9cdcea",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "57de60e5-b96c-499c-a7cf-0f30fc33b324",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
        " 'course': 'data-engineering-zoomcamp'}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "c499838b-73b3-44be-8ba6-f46d3693aa59",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "a8d8ea88-7412-49c1-8a8e-44d0d0862a17",
    "metadata": {},
    "outputs": [],
@@ -131,17 +131,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "ce7d0d18-5c07-4010-9f90-bbd021f110c8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<minsearch.Index at 0x7d0d016b8760>"
+       "<minsearch.Index at 0x10c0eb760>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "aa755a08-b98d-4e92-8994-04e6108499d9",
    "metadata": {},
    "outputs": [],
@@ -162,34 +162,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "ef8e9cdc-dfd4-4e54-a332-4b9bde4e6047",
+   "execution_count": 20,
+   "id": "0c33bbfa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = OpenAI()"
+    "import os, getpass\n",
+    "api_key = getpass.getpass('Enter your OpenAI API key: ')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
+   "id": "ef8e9cdc-dfd4-4e54-a332-4b9bde4e6047",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = OpenAI(api_key=api_key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "id": "e7da9664-ecb3-4d89-87da-9b2b942444d0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"It's not uncommon for courses to accept enrollments even after they have started, but policies can vary widely depending on the institution or provider offering the course. Here are a few steps you can take to find out if you can still enroll:\\n\\n1. **Check the Course Platform**: If the course is offered online, visit the course's webpage for information about late enrollment policies.\\n\\n2. **Contact the Instructor**: Reach out to the course instructor or lead facilitator. They may be willing to make an exception or provide you with the necessary information.\\n\\n3. **Reach Out to Administrative Offices**: Contact the academic or administrative office responsible for course enrollments. This might be the registrar's office, student services, or a similar department.\\n\\n4. **Review Deadlines and Policies**: Look for any publicly available documentation outlining the deadlines and policies regarding late enrollments.\\n\\n5. **Consider Catching Up**: Be prepared to quickly catch up on any missed material if you are allowed to enroll late. This shows commitment and can make it easier for instructors or administration to accommodate your request.\\n\\nRemember, clear and courteous communication will always help you in these situations. Good luck!\""
+       "'It depends on the specific circumstances and policies of the course and institution. Some courses may allow students to enroll late with permission from the instructor, while others may have strict deadlines for enrollment. It is best to contact the instructor or the department offering the course to inquire about late enrollment options.'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "response = client.chat.completions.create(\n",
-    "    model='gpt-4o',\n",
+    "    model='gpt-3.5-turbo',\n",
     "    messages=[{\"role\": \"user\", \"content\": q}]\n",
     ")\n",
     "\n",
@@ -198,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "id": "b21237c3-80e9-429c-a089-d45428087046",
    "metadata": {},
    "outputs": [],
@@ -218,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "id": "8cc5784e-6515-42e5-be62-8fb915df1088",
    "metadata": {},
    "outputs": [],
@@ -245,14 +256,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "id": "97d35dec-c25f-472d-b961-20d5c30902ae",
    "metadata": {},
    "outputs": [],
    "source": [
     "def llm(prompt):\n",
     "    response = client.chat.completions.create(\n",
-    "        model='gpt-4o',\n",
+    "        model='gpt-3.5-turbo',\n",
     "        messages=[{\"role\": \"user\", \"content\": prompt}]\n",
     "    )\n",
     "    \n",
@@ -261,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "id": "8602f40b-ad3b-49c9-b3cc-051a79c888bc",
    "metadata": {},
    "outputs": [],
@@ -277,17 +288,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "id": "5fd4497b-c5d5-4258-b950-6b35d1af4ec5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"To run Kafka, follow the relevant instructions based on your use case:\\n\\n### For Java:\\nNavigate to your project directory and use the following command in the terminal to run a Kafka producer/consumer/KStreams, etc.:\\n```shell\\njava -cp build/libs/<jar_name>-1.0-SNAPSHOT.jar:out src/main/java/org/example/JsonProducer.java\\n```\\nReplace `<jar_name>` with the actual name of your JAR file.\\n\\n### For Python:\\nIf you're running Python Kafka, ensure you have your virtual environment set up and activate it. Here’s how you can do it:\\n\\n1. **Create a virtual environment and install required packages (run only once):**\\n    ```shell\\n    python -m venv env\\n    source env/bin/activate\\n    pip install -r ../requirements.txt\\n    ```\\n\\n2. **Activate the virtual environment (run this every time you need it):**\\n    ```shell\\n    source env/bin/activate\\n    ```\\n\\n3. **Deactivate the virtual environment when done:**\\n    ```shell\\n    deactivate\\n    ```\\n\\nNote: On Windows, the activation command would be slightly different:\\n```shell\\nenv\\\\Scripts\\\\activate\\n```\\n\\nMake sure that your Docker images are up and running if they are part of your setup.\""
+       "'To run Kafka in the terminal, you can follow these steps:\\n- In the project directory, run:\\njava -cp build/libs/<jar_name>-1.0-SNAPSHOT.jar:out src/main/java/org/example/JsonProducer.java\\n\\nIf you encounter the error \"ModuleNotFoundError: No module named \\'kafka.vendor.six.moves\\'\", it is suggested to use https://github.com/wbarnha/kafka-python-ng by running:\\npip install kafka-python-ng'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,17 +309,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "id": "385b012f-4905-422d-8d7c-3d542dfe5a7c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Yes, you can still enroll in the course even after it has started. You are eligible to submit homework assignments, but please be mindful of the deadlines for the final projects to ensure you complete everything on time.'"
+       "'Based on the context provided, yes, you can still enroll in the course after the start date. You will still be eligible to submit homework, but be aware of deadlines for final projects. Additionally, after the course finishes, you will have access to all materials to follow at your own pace and prepare for the next cohort.'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "id": "d3e04fb3-b7f7-4e53-8de9-a1c6cde3f038",
    "metadata": {},
    "outputs": [
@@ -332,7 +343,7 @@
        " 'course': 'data-engineering-zoomcamp'}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "id": "2c05052f-a85a-4137-8398-0fd0be678599",
    "metadata": {},
    "outputs": [],
@@ -353,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "id": "a78df1cc-5a5a-40b4-b673-19c7f0319453",
    "metadata": {},
    "outputs": [],
@@ -363,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "id": "c9367c18-41ad-495e-9920-1a0c552f0d18",
    "metadata": {},
    "outputs": [
@@ -373,7 +384,7 @@
        "ObjectApiResponse({'acknowledged': True, 'shards_acknowledged': True, 'index': 'course-questions'})"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,35 +436,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "id": "5c230059-e219-4a13-a7f8-ede4cf1b028f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/python/3.10.13/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from tqdm.auto import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 35,
    "id": "70fe3c97-916d-42c0-bd7b-4f42d9056409",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████████████████████████████| 948/948 [00:28<00:00, 33.07it/s]\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "db186bf2f9fb40c4a0f72699370b3d03",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/948 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -473,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 37,
    "id": "7c72e000-910b-4fb5-aa88-2561e7bc39f2",
    "metadata": {},
    "outputs": [],
@@ -511,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 38,
    "id": "81abecbc-eb6b-428f-ab7d-7e21f58b64de",
    "metadata": {},
    "outputs": [],
@@ -525,17 +534,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 39,
    "id": "0ea9315a-a619-4066-9e90-8c260f2c8450",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Yes, you can still join the course even if you discovered it after the start date. You are eligible to submit the homeworks, but be mindful of the deadlines for turning in the final projects. So make sure not to leave everything for the last minute.'"
+       "\"Based on the information provided in the FAQ database, you can still join the course after the start date. You are eligible to submit homework even if you don't register. However, there will be deadlines for turning in final projects, so it is recommended not to leave everything for the last minute.\""
       ]
      },
-     "execution_count": 45,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,11 +555,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "d8095274-c9cd-4fd5-80d2-069fc951834f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The systems used in the Data Engineering Zoomcamp include Git for version control, Kafka for streaming, and GitHub for course-related materials like exercise files and homework.'"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rag(\"what systems are used in the data engineering zoomcamp? \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "11236f53",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'As of 2024, there are 3 Zoom Camps held in a year, each for a separate course:\\n1. Data-Engineering (Jan - Apr)\\n2. MLOps (May - Aug)\\n3. Machine Learning (Sep - Jan)'"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rag('how many zoomcamps are going to be held in 2024? what are the names of these zoomcamps? ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "44e0cb3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The issues people faced in the data engineering Zoomcamps included problems with including files from the Mage repo in a personal copy of the Data Engineering Zoomcamp repo, such as GitHub seeing them as separate repositories.'"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rag('what kind of issues did people face in the data engineering zoomcamps?')"
+   ]
   }
  ],
  "metadata": {
@@ -569,7 +633,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
