pulic learning link

--- a/cohorts/2024/01-intro/module01.ipynb
+++ b/cohorts/2024/01-intro/module01.ipynb
@@ -12,6 +12,7 @@
     "\n",
     "## Extra questions\n",
     "\n",
+    "- post: https://www.linkedin.com/posts/activity-7211111693085548545-0qj-\n",
     "- Homework URL\n",
     "- Time spent on lectures (hours): ~4h\n",
     "- Time spent on homework (hours): ~1h"
