Added architecture diagram and About section

--- a/cohorts/2024/01-intro/homework.ipynb
+++ b/cohorts/2024/01-intro/homework.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## About \n",
+    "This is Homework for 01-Intro. Im this homework the goal is to build a Q&A system using ElastiCSearch and an LLM for answerign questions related to the Zoomcamp courses. The FAQ documents for Zoomcamp courses are stored in Elastic Search. The Q&A is implemented by prompting the LLM with the query and the search results from ElasticSearch."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![image](rag_architecture.png)\n",
+    " "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
