hw2: tokens desc

--- a/cohorts/2024/02-open-source/hw.ipynb
+++ b/cohorts/2024/02-open-source/hw.ipynb
@@ -1188,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1197,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1209,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1234,13 +1234,13 @@
       "\n",
       "**U = mgh**\n",
       "\n",
-      "Where:\n",
+      "**Where:**\n",
       "\n",
       "* **m** is the mass in kilograms (kg)\n",
-      "* **g** is the gravitational constant (9.8 m/s^2)\n",
+      "* **g** is the acceleration due to gravity in meters per second squared (m/s²)\n",
       "* **h** is the height or position in meters (m)\n",
       "\n",
-      "The formula shows that energy can be expressed as the sum of kinetic and potential energy. The kinetic energy is a measure of the object's ability to do work, while the potential energy is a measure of the object's ability to do work against a force.\n"
+      "The formula shows that energy can be expressed as the sum of kinetic and potential energy. The kinetic energy is a measure of the object's ability to do work, while the potential energy is a measure of the object's ability to do work against gravity.\n"
      ]
     }
    ],
@@ -1267,21 +1267,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The last time we've used the tiktoken library. But it knows nothing about `gemma` model we using now. If it's a GPT-4o model, the number of tokens is"
+    "The number of tokens:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "256"
+       "CompletionUsage(completion_tokens=283, prompt_tokens=34, total_tokens=317)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response.usage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "283"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response.usage.completion_tokens"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The last time we've used the tiktoken library. But it knows nothing about the `gemma` model we using now. If it's a GPT-4o model, the number of tokens is"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "260"
+      ]
+     },
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1300,7 +1347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1311,22 +1358,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "280"
+       "283"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(tokenizer.encode(content, add_special_tokens=False))\n"
+    "assert len(tokenizer.encode(content, add_special_tokens=True)) == response.usage.completion_tokens\n",
+    "len(tokenizer.encode(content, add_special_tokens=True))\n"
    ]
   }
  ],
