homework + vector_search last section slight modification

--- a/03-vector-search/demo_es.ipynb
+++ b/03-vector-search/demo_es.ipynb
@@ -387,33 +387,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Step 7: Perform Semantic Search & Advanced Search"
+    "#### Step 7: Perform Keyword search with Semantic Search (Hybrid/Advanced Search)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Note: I made a minor modification to the query shown in the video to the notebook here\n",
+    "# Included \"knn\" in the search query (to perform a sementic search) along with the filter  \n",
+    "knn_query = {\n",
+    "    \"field\" : \"text_vector\",\n",
+    "    \"query_vector\" :  vector_search_term,\n",
+    "    \"k\" : 5,\n",
+    "    \"num_candidates\" : 10000\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "response = es_client.search(\n",
     "    index=index_name,\n",
     "    query={\n",
-    "        \"bool\": {\n",
-    "            \"must\": {\n",
-    "             \"multi_match\": \n",
-    "                        {\"query\": \"windows or python?\", \n",
-    "                         \"fields\": [\"text\", \"question\",\"course\",\"title\"],\n",
-    "                         \"type\": \"best_fields\"\n",
-    "                        }\n",
-    "                    },\n",
-    "            \"filter\": {\n",
-    "                \"term\": {\n",
-    "                        \"course\": \"data-engineering-zoomcamp\"\n",
-    "            }\n",
-    "        }\n",
-    "        }\n",
-    "    }\n",
+    "        \"match\": {\n",
+    "                \"section\": \"General course-related questions\"\n",
+    "            },\n",
+    "        },\n",
+    "        \n",
+    "    knn=knn_query,\n",
+    "    size=5\n",
     ")"
    ]
   },
