homework + vector_search last section slight modification v2

--- a/03-vector-search/demo_es.ipynb
+++ b/03-vector-search/demo_es.ipynb
@@ -396,8 +396,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Note: I made a minor modification to the query shown in the video to the notebook here\n",
-    "# Included \"knn\" in the search query (to perform a sementic search) along with the filter  \n",
+    "# Note: I made a minor modification to the query shown in the notebook here (compare to the one shown in the video)\n",
+    "# Included \"knn\" in the search query (to perform a semantic search) along with the filter  \n",
     "knn_query = {\n",
     "    \"field\" : \"text_vector\",\n",
     "    \"query_vector\" :  vector_search_term,\n",
