--- a/cohorts/2024/02-open-source/module02.ipynb
+++ b/cohorts/2024/02-open-source/module02.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "## Extra questions\n",
     "\n",
-    "- Homework URL: ?\n",
+    "- Homework URL: https://github.com/alexkolo/llm-zoomcamp-2024/blob/main/cohorts/2024/02-open-source/module02.ipynb\n",
     "- Time spent on lectures (hours): ~2h\n",
     "- Time spent on homework (hours): ~2h"
    ]
