--- a/cohorts/2024/03-vector-search/module03.ipynb
+++ b/cohorts/2024/03-vector-search/module03.ipynb
@@ -12,7 +12,9 @@
     "\n",
     "## Extra questions\n",
     "\n",
-    "- Homework URL: https://github.com/alexkolo/llm-zoomcamp-2024/blob/main/cohorts/2024/03-vector-search//module03.ipynb\n",
+    "- public learning: https://www.linkedin.com/posts/activity-7218727043360768002-4P0Q\n",
+    "    - created via: https://chatgpt.com/c/b576d1a1-eea4-42b5-9ee4-8f14183fb475\n",
+    "- Homework URL: https://github.com/alexkolo/llm-zoomcamp-2024/blob/main/cohorts/2024/03-vector-search/module03.ipynb\n",
     "- Time spent on lectures (hours): ~2h\n",
     "- Time spent on homework (hours): ~2h"
    ]
